--- a/greeting-card.html
+++ b/greeting-card.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Happy Birthday Nesha</title>
   <style>
     body {
       margin: 0;
+      padding: 0;
+      font-family: 'Arial', sans-serif;
       height: 100vh;
+      background: url('https://images7.alphacoders.com/834/834348.jpg') no-repeat center center fixed;
+      background-size: cover;
       display: flex;
       align-items: center;
       justify-content: center;
-      background: url('https://images7.alphacoders.com/834/834348.jpg') no-repeat center center fixed;
-      background-size: cover;
-      font-family: 'Arial', sans-serif;
-      overflow: hidden;
+      overflow: auto;
     }
 
     .card-container {
-      width: 600px;
-      height: 400px;
-      position: relative;
-      border-radius: 10px;
-      overflow: hidden;
-      box-shadow: 0 20px 40px rgba(0,0,0,0.3);
+      width: 90%;
+      max-width: 600px;
       background-color: rgba(255, 255, 255, 0.95);
+      border-radius: 10px;
+      box-shadow: 0 20px 40px rgba(0,0,0,0.3);
+      position: relative;
+      overflow: hidden;
     }
 
     .card-cover {
@@ -34,8 +36,8 @@
       color: white;
       display: flex;
       flex-direction: column;
-      align-items: center;
       justify-content: center;
+      align-items: center;
       cursor: pointer;
       z-index: 10;
       transition: transform 1s ease-in-out;
@@ -43,35 +45,33 @@
     }
 
     .card-cover h1 {
-      font-size: 2.8rem;
+      font-size: 2.2rem;
       margin-bottom: 10px;
       text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
       animation: pulse 2s infinite;
     }
 
     .card-cover p {
-      font-size: 1.3rem;
-      margin-top: 20px;
+      font-size: 1.2rem;
       animation: float 3s ease-in-out infinite;
     }
 
     .card-content {
-      position: absolute;
+      position: relative;
       width: 100%;
-      height: 100%;
-      background: white;
-      padding: 40px;
+      padding: 30px 20px;
       box-sizing: border-box;
       display: flex;
       flex-direction: column;
       overflow-y: auto;
+      background: white;
     }
 
     .card-content h2 {
-      color: #ff6b6b;
-      font-size: 2rem;
-      margin-top: 0;
       text-align: center;
+      font-size: 1.6rem;
+      margin-top: 0;
+      color: #ff6b6b;
       background: linear-gradient(90deg, #ff6b6b, #ffc3a0, #ff6b6b);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
@@ -80,48 +80,48 @@
     }
 
     .card-content p {
-      font-size: 1.1rem;
-      line-height: 1.6;
+      font-size: 1rem;
       color: #333;
-      margin-bottom: 15px;
+      line-height: 1.6;
+      margin-bottom: 12px;
+    }
+
+    .birthday-icon {
+      font-size: 2.5rem;
+      text-align: center;
+      margin: 15px 0;
+      animation: bounce 2s infinite;
     }
 
     .signature {
       margin-top: auto;
+      font-size: 1rem;
+      color: #666;
       text-align: right;
       font-style: italic;
-      color: #666;
-      font-size: 1.2rem;
-      padding-top: 20px;
+      padding-top: 15px;
     }
 
     .tap-hint {
       position: absolute;
-      bottom: -40px;
-      width: 100%;
+      bottom: -35px;
       text-align: center;
+      font-size: 0.9rem;
       color: #666;
       animation: blink 2s infinite;
-    }
-
-    .birthday-icon {
-      font-size: 3rem;
-      text-align: center;
-      margin: 10px 0;
-      animation: bounce 2s infinite;
+      width: 100%;
     }
 
     .back-button {
-      margin-top: 30px;
+      margin-top: 25px;
       align-self: center;
-      padding: 10px 25px;
+      padding: 10px 20px;
       background-color: #ff6b6b;
       border: none;
-      color: white;
+      border-radius: 20px;
       font-size: 1rem;
-      border-radius: 25px;
+      color: white;
       cursor: pointer;
-      transition: background-color 0.3s ease;
       display: none;
     }
 
@@ -129,9 +129,13 @@
       background-color: #ff4e4e;
     }
 
+    .opened .card-cover {
+      transform: scaleY(0);
+    }
+
     @keyframes float {
       0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-8px); }
+      50% { transform: translateY(-10px); }
     }
 
     @keyframes bounce {
@@ -160,10 +164,6 @@
         opacity: 0;
       }
     }
-
-    .opened .card-cover {
-      transform: scaleY(0);
-    }
   </style>
 </head>
 <body>
@@ -175,29 +175,20 @@
     <div class="card-content">
       <h2>Happy Birthday, Nesha 🎉</h2>
       <div class="birthday-icon">🎂🎈🎁</div>
-      <p>
-        Today is all about you — your smile, your kindness, and the light you bring into this world.
-      </p>
-      <p>
-        I may not know where we stand right now…<br>
-        But one thing hasn’t changed — I still remember you. I still value the friendship we shared.
-      </p>
-      <p>
-        On your special day, I wish you endless happiness, peace, and love.<br>
-        May every dream you hold close come true this year.
-      </p>
-      <p>
-        And quietly, in my heart, I also hope… that one day, we’ll talk again — not as strangers, but as two people who once cared.
-      </p>
-      <p>
-        Until then, I’ll keep cheering for you from afar.
-      </p>
+      <p>Today is all about you — your smile, your kindness, and the light you bring into this world.</p>
+      <p>I may not know where we stand right now…<br>But one thing hasn’t changed — I still remember you. I still value the friendship we shared.</p>
+      <p>On your special day, I wish you endless happiness, peace, and love.<br>May every dream you hold close come true this year.</p>
+      <p>And quietly, in my heart, I also hope… that one day, we’ll talk again — not as strangers, but as two people who once cared.</p>
+      <p>Until then, I’ll keep cheering for you from afar.</p>
       <div class="signature">— Your friend, Nehemia</div>
       <button class="back-button" onclick="goBack()">← Back</button>
     </div>
     <div class="tap-hint">Tap the card to open ✨</div>
   </div>
 
+  <audio id="bg-music" loop>
+    <source src="https://cdn.pixabay.com/audio/2022/10/31/audio_07b08e0f10.mp3" type="audio/mpeg">
+  </audio>
 
   <script>
     function openCard() {
@@ -206,14 +197,12 @@
       document.querySelector('.back-button').style.display = 'inline-block';
 
       // Play music
-      const music = document.getElementById('bg-music');
-      music.play().catch(() => {
-        console.log("Music playback blocked by browser.");
+      document.getElementById('bg-music').play().catch(() => {
+        console.log("Music blocked by browser until user interacts.");
       });
 
-      // Falling hearts effect
-      const colors = ['#ff6b6b', '#ff8e8e', '#ffb3b3'];
-      for (let i = 0; i < 30; i++) {
+      // Falling hearts
+      for (let i = 0; i < 20; i++) {
         const heart = document.createElement('div');
         heart.innerHTML = '❤️';
         heart.style.position = 'fixed';
@@ -238,7 +227,7 @@
         document.head.appendChild(style);
       }
 
-      // Floating balloons
+      // Balloons
       for (let i = 0; i < 10; i++) {
         const balloon = document.createElement('div');
         balloon.innerHTML = '🎈';
@@ -248,7 +237,6 @@
         balloon.style.fontSize = '2rem';
         balloon.style.animation = `rise ${6 + Math.random() * 2}s linear forwards`;
         document.body.appendChild(balloon);
-
         setTimeout(() => balloon.remove(), 8000);
       }
     }
@@ -259,3 +247,4 @@
   </script>
 </body>
 </html>
+
