greeting-card.html

--- a/greeting-card.html
+++ b/greeting-card.html
@@ -10,7 +10,7 @@
       padding: 0;
       font-family: 'Arial', sans-serif;
       height: 100vh;
-      background: url('4b3cbe58-5e2c-4986-a02d-546f4b1c5d62.png') no-repeat center center fixed;
+      background: url('https://wallpapercave.com/wp/wp6740750.jpg') no-repeat center center fixed;
       background-size: cover;
       display: flex;
       align-items: center;
@@ -32,7 +32,7 @@
       position: absolute;
       width: 100%;
       height: 100%;
-      background: url('4b3cbe58-5e2c-4986-a02d-546f4b1c5d62.png') center/cover no-repeat;
+      background: url('https://wallpapercave.com/wp/wp6740750.jpg') center/cover no-repeat;
       display: flex;
       flex-direction: column;
       align-items: center;
