--- a/index.html
+++ b/index.html
@@ -3,78 +3,134 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>A Special Surprise 🎁</title>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      height: 100vh;
-      background: linear-gradient(to bottom, #c9d6ff, #e2e2e2);
-      font-family: 'Segoe UI', sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      overflow: hidden;
-      padding: 20px;
-    }
-
-    .container {
-      text-align: center;
-      animation: fadeIn 2s ease-out;
-    }
-
-    h1 {
-      font-size: 2rem;
-      color: #333;
-      margin-bottom: 20px;
-    }
-
-    .envelope-icon {
-      font-size: 4rem;
-      animation: bounce 2s infinite;
-    }
-
-    .btn {
-      margin-top: 30px;
-      padding: 12px 24px;
-      font-size: 1rem;
-      font-weight: bold;
-      color: white;
-      background: linear-gradient(to right, #00f2fe, #4facfe);
-      border: none;
-      border-radius: 30px;
-      cursor: pointer;
-      text-decoration: none;
-      display: inline-block;
-      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-      transition: transform 0.3s ease, background 0.3s ease;
-    }
-
-    .btn:hover {
-      transform: scale(1.05);
-    }
-
-    @keyframes bounce {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-10px); }
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(30px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-  </style>
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
+  <title>Happy Birthday!!! :)</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./style/main.css" />
 </head>
+
 <body>
-  <div class="container">
-    <div class="envelope-icon">💌</div>
-    <h1>Someone left you a message...</h1>
-    <a href="greeting-card.html" class="btn">Open the Card</a>
+
+<audio class="song" loop autoplay>
+  <source src="./music/heretostay.mpeg">
+  Your browser isn't invited for super fun audio time.
+</audio>
+
+<div class="container">
+  <div class="one">
+    <h1 class="one">
+      Hi
+      <span id="name">Nesha</span>
+    </h1>
+    <p class="two" id="greetingText">I am Waiting for you</p>
   </div>
+
+  <div class="three">
+    <p>It's your birthday!! </p>
+  </div>
+
+  <div class="four">
+    <div class="text-box">
+      <p class="hbd-chatbox">
+        Happy Birthday, Nesha!  
+        You’ve always been someone special — with a smile that lights up the world and a heart full of kindness.  
+        On this beautiful day, I just want to say... you are remembered, you are appreciated, and you truly deserve all the happiness in the world. 🎂💖🌸
+      </p>
+      <p class="fake-btn">Send</p>
+    </div>
+  </div>
+
+  <div class="five">
+    <p class="idea-1">That's what I was going to do.</p>
+    <p class="idea-2">But then I Realised I can't.</p>
+    <p class="idea-3">
+      I wanted to do something<br>
+      <strong>special</strong>.
+    </p>
+    <p class="idea-4">Because,</p>
+    <p class="idea-5">
+      You are My Friend!!
+      <span>:)</span>
+    </p>
+    <p class="idea-6">
+      <span>S</span>
+      <span>O</span>
+    </p>
+  </div>
+
+  <div class="six">
+    <img src="./img/nes.jpg" alt="profile" class="profile-picture" id="imagePath"/>
+    <div class="wish">
+      <h3 class="wish-hbd">Happy Birthday Nesha!</h3>
+      <h5 id="wishText">May the God's Blessings always be with you! ;)</h5>
+    </div>
+  </div>
+
+  <div class="seven">
+    <div class="baloons">
+      <!-- Balloons: keep as-is -->
+      <img src="img/ballon2.svg" alt="" />
+      <img src="img/ballon1.svg" alt="" />
+      <img src="img/ballon3.svg" alt="" />
+      <img src="img/ballon1.svg" alt="" />
+      <img src="img/ballon2.svg" alt="" />
+      <img src="img/ballon3.svg" alt="" />
+      <img src="img/ballon2.svg" alt="" />
+      <img src="img/ballon3.svg" alt="" />
+      <img src="img/ballon1.svg" alt="" />
+      <img src="img/ballon2.svg" alt="" />
+      <img src="img/ballon3.svg" alt="" />
+      <img src="img/ballon2.svg" alt="" />
+      <img src="img/ballon1.svg" alt="" />
+      <img src="img/ballon3.svg" alt="" />
+      <img src="img/ballon2.svg" alt="" />
+      <img src="img/ballon3.svg" alt="" />
+      <img src="img/ballon1.svg" alt="" />
+      <img src="img/ballon2.svg" alt="" />
+      <img src="img/ballon1.svg" alt="" />
+      <img src="img/ballon3.svg" alt="" />
+      <img src="img/ballon3.svg" alt="" />
+      <img src="img/ballon1.svg" alt="" />
+      <img src="img/ballon2.svg" alt="" />
+      <img src="img/ballon3.svg" alt="" />
+      <img src="img/ballon2.svg" alt="" />
+      <img src="img/ballon1.svg" alt="" />
+      <img src="img/ballon3.svg" alt="" />
+      <img src="img/ballon2.svg" alt="" />
+      <img src="img/ballon3.svg" alt="" />
+      <img src="img/ballon1.svg" alt="" />
+      <img src="img/ballon2.svg" alt="" />
+      <img src="img/ballon1.svg" alt="" />
+      <img src="img/ballon3.svg" alt="" />
+    </div>
+  </div>
+
+  <div class="eight">
+    <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg"><circle cx="20" cy="20" r="20" /></svg>
+    <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg"><circle cx="20" cy="20" r="20" /></svg>
+    <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg"><circle cx="20" cy="20" r="20" /></svg>
+    <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg"><circle cx="20" cy="20" r="20" /></svg>
+    <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg"><circle cx="20" cy="20" r="20" /></svg>
+    <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg"><circle cx="20" cy="20" r="20" /></svg>
+    <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg"><circle cx="20" cy="20" r="20" /></svg>
+    <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg"><circle cx="20" cy="20" r="20" /></svg>
+    <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg"><circle cx="20" cy="20" r="20" /></svg>
+  </div>
+
+  <div class="nine">
+    <p>Okay, now come back and tell me if you liked it.</p>
+    <p id="replay">Or click, if you want to watch it again.</p>
+    <p class="last-smile">:)</p>
+  </div>
+</div>
+
+<!-- Greensock -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
+<!-- Sweetalert -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script type="application/javascript" src="./script/main.js"></script>
 </body>
 </html>
-
