--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
       Hi
       <span id="name">Nesha</span>
     </h1>
-    <p class="two" id="greetingText">I am Waiting for you</p>
+    <p class="two" id="greetingText">It's been a While</p>
   </div>
 
   <div class="three">
-    <p>It's your birthday!! </p>
+    <p>Today is your birthday!! </p>
   </div>
 
   <div class="four">
