--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <div class="six">
     <img src="./img/nes.jpg" alt="profile" class="profile-picture" id="imagePath"/>
     <div class="wish">
-      <h3 class="wish-hbd">Happy Birthday Nesha!</h3>
+      <h3 class="wish-hbd">💖Happy Birthday🎉 Nesha✨</h3>
       <h5 id="wishText">May the God's Blessings always be with you! ;)</h5>
     </div>
   </div>
